feat: add html templates

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    <p><a href="/categories">Все категорий</a></p>
-    <p><a href="/categories/create">Создать категорию</a></p>
-    <p><a href="/products">Все товары</a></p>
-    <p><a href="/products/create">Создать товар</a></p>
+<p><a href="/categories">Все категорий</a></p>
+<p><a href="/categories/create">Создать категорию</a></p>
+<p><a href="/products">Все товары</a></p>
+<p><a href="/products/create">Создать товар</a></p>
+<p>Добро пожаловать <span th:text="${user.name}"></span></p>
 </body>
 </html>
