--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Categories</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Все категории:</h1>
+<h1>Все категорий</h1>
 <div th:each="category : ${categories}">
     [[${category.name}]]
 </div>
 
-<a href=""></a>
+<a href="/categories/create">Создать категорию</a>
 </body>
 </html>
