--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -3,13 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .content {
+            min-height: 80vh;
+        }
+
+        .header {
+            font-size: 24pt;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .category-item {
+            font-size: 16pt;
+            margin: 10px 0;
+        }
+
+        .create-category-link {
+            display: inline-block;
+            margin-top: 20px;
+            font-size: 14pt;
+            font-weight: bold;
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .create-category-link:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<h1>Все категорий</h1>
-<div th:each="category : ${categories}">
-    [[${category.name}]]
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <span class="fs-4">Spring Shop</span>
+        </a>
+    </header>
 </div>
 
-<a href="/categories/create">Создать категорию</a>
+<div class="content" >
+    <div class="alert alert-success" role="alert">
+        Добро пожаловать, <span th:text="${user.name}"></span>!
+    </div>
+
+    <h3 class="header">Все категории</h3>
+    <div th:each="category : ${categories}" class="category-item">
+        [[${category.name}]]
+    </div>
+    <a href="/categories/create" class="create-category-link">Создать категорию</a>
+</div>
+
+<footer class="footer">
+    <div class="container">
+        <span>Spring Shop &copy; 2024</span>
+    </div>
+</footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </html>
