--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,34 +2,65 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Products</title>
+    <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-    <h1>Все товары</h1>
+    <h1>Все продукты</h1>
+    <div>
+        <form th:action="@{/products}" method="get">
+            <div class="form-horizontal" style="display: flex; align-items: center">
+                <div style="margin-right: 10px">
+                    <label for="minPrice">Минимальная цена:</label>
+                    <input type="number" name="minPrice" id="minPrice" th:value="${minPrice}">
+                </div>
+                <div style="margin-right: 10px">
+                    <label for="maxPrice">Максимальная цена:</label>
+                    <input type="number" name="maxPrice" id="maxPrice" th:value="${maxPrice}">
+                </div>
+                <div style="margin-right: 10px">
+                    <label for="category">Категория:</label>
+                    <select name="categoryId" id="category">
+                        <option value="">Все</option>
+                        <tr th:each="category:${categories}">
+                            <option th:value="${category.id}" th:text="${category.name}"
+                                    th:selected="${categoryId==category.id}"></option>
+                        </tr>
+                    </select>
+                </div>
+                <button type="submit" style="margin-left: 10px">Фильтровать</button>
+            </div>
+        </form>
+    </div>
     <table class="table">
         <thead>
         <tr>
-            <th>Название товара</th>
-            <th>Стоимость</th>
+            <th>Название продукта</th>
             <th>Категория</th>
+            <th>Цена</th>
             <th></th>
             <th></th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="product : ${products}">
-            <td><a class="text-decoration-none text-dark" th:href="@{|products/${product.getId()}|}" th:text="${product.name}"></a></td>
-            <td th:text="${product.price}"></td>
+        <tr th:each="product: ${products}">
+            <td><a class="text-decoration-none text-dark" th:href="@{|products/${product.getId()}|}"
+                   th:text="${product.name}"></a></td>
             <td th:text="${product.category.name}"></td>
-            <td><a th:href="@{|products/update/${product.getId()}|}">Редактировать</a></td>
-            <td><a th:href="@{|products/delete/${product.getId()}|}">Удалить</a></td>
+            <td th:text="${product.price}"></td>
+            <td>
+                <a th:href="@{|products/update/${product.getId()}|}"><i class="fa-solid fa-pen-to-square"></i></a>
+            </td>
+            <td>
+                <a th:href="@{|products/delete/${product.getId()}|}"><i class="fa-solid fa-trash"></i></a>
+            </td>
         </tr>
         </tbody>
     </table>
-    <a href="/products/create/chooseCategory">Создать товар</a>
+
+    <a href="/products/create/chooseCategory">Создать продукт</a>
 </div>
 
 </body>
