feat: add repository, service, model & view for adding products to cart

--- a/src/main/resources/templates/product_single_page.html
+++ b/src/main/resources/templates/product_single_page.html
@@ -18,5 +18,11 @@
     </p>
 </div>
 
+<div>
+    <form th:action="@{|/cart/${product.getId()}|}" method="post">
+        <button type="submit">Add to card</button>
+    </form>
+</div>
+
 </body>
 </html>
