--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -5,64 +5,106 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .content {
+            min-height: 80vh;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <h1>Все продукты</h1>
-    <div>
-        <form th:action="@{/products}" method="get">
-            <div class="form-horizontal" style="display: flex; align-items: center">
-                <div style="margin-right: 10px">
-                    <label for="minPrice">Минимальная цена:</label>
-                    <input type="number" name="minPrice" id="minPrice" th:value="${minPrice}">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <span class="fs-4">Spring Shop</span>
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/categories" class="nav-link">Все категории</a></li>
+            <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
+            <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
+            <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
+        </ul>
+    </header>
+
+    <div class="content">
+        <div class="alert alert-success">
+            Добро пожаловать, <span th:text="${user.name}"></span>!
+        </div>
+
+        <h1>Все продукты</h1>
+        <div>
+            <form th:action="@{/products}" method="get">
+                <div class="form-horizontal" style="display: flex; align-items: center">
+                    <div style="margin-right: 10px">
+                        <label for="minPrice">Минимальная цена:</label>
+                        <input type="number" name="minPrice" id="minPrice" th:value="${minPrice}">
+                    </div>
+                    <div style="margin-right: 10px">
+                        <label for="maxPrice">Максимальная цена:</label>
+                        <input type="number" name="maxPrice" id="maxPrice" th:value="${maxPrice}">
+                    </div>
+                    <div style="margin-right: 10px">
+                        <label for="category">Категория:</label>
+                        <select name="categoryId" id="category">
+                            <option value="">Все</option>
+                            <tr th:each="category:${categories}">
+                                <option th:value="${category.id}" th:text="${category.name}"
+                                        th:selected="${categoryId==category.id}"></option>
+                            </tr>
+                        </select>
+                    </div>
+                    <button type="submit" style="margin-left: 10px">Фильтровать</button>
                 </div>
-                <div style="margin-right: 10px">
-                    <label for="maxPrice">Максимальная цена:</label>
-                    <input type="number" name="maxPrice" id="maxPrice" th:value="${maxPrice}">
-                </div>
-                <div style="margin-right: 10px">
-                    <label for="category">Категория:</label>
-                    <select name="categoryId" id="category">
-                        <option value="">Все</option>
-                        <tr th:each="category:${categories}">
-                            <option th:value="${category.id}" th:text="${category.name}"
-                                    th:selected="${categoryId==category.id}"></option>
-                        </tr>
-                    </select>
-                </div>
-                <button type="submit" style="margin-left: 10px">Фильтровать</button>
-            </div>
-        </form>
+            </form>
+        </div>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Название продукта</th>
+                <th>Категория</th>
+                <th>Цена</th>
+                <th></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="product: ${products}">
+                <td><a class="text-decoration-none text-dark" th:href="@{|products/${product.getId()}|}"
+                       th:text="${product.name}"></a></td>
+                <td th:text="${product.category.name}"></td>
+                <td th:text="${product.price}"></td>
+                <td>
+                    <a th:href="@{|products/update/${product.getId()}|}"><i class="fa-solid fa-pen-to-square"></i></a>
+                </td>
+                <td>
+                    <a th:href="@{|products/delete/${product.getId()}|}"><i class="fa-solid fa-trash"></i></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <a href="/products/create/chooseCategory">Создать продукт</a>
     </div>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Название продукта</th>
-            <th>Категория</th>
-            <th>Цена</th>
-            <th></th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="product: ${products}">
-            <td><a class="text-decoration-none text-dark" th:href="@{|products/${product.getId()}|}"
-                   th:text="${product.name}"></a></td>
-            <td th:text="${product.category.name}"></td>
-            <td th:text="${product.price}"></td>
-            <td>
-                <a th:href="@{|products/update/${product.getId()}|}"><i class="fa-solid fa-pen-to-square"></i></a>
-            </td>
-            <td>
-                <a th:href="@{|products/delete/${product.getId()}|}"><i class="fa-solid fa-trash"></i></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-    <a href="/products/create/chooseCategory">Создать продукт</a>
 </div>
-
+<footer class="footer">
+    <div class="container">
+        <span>Spring Shop &copy; 2024</span>
+    </div>
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
