--- a/src/main/resources/templates/product_create.html
+++ b/src/main/resources/templates/product_create.html
@@ -5,30 +5,76 @@
     <title>Product Create</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .content {
+            min-height: 80vh;
+        }
+
+        .form-control {
+            width: min-content;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <h1 th:text="${category.name}"></h1>
-    <form action="/products/create" method="post" th:object="${product}">
-        <input type="hidden" name="categoryId" th:value="${category.id}">
-        <label for="name">
-            Название товара
-            <input id="name" th:field="*{name}" required class="form-control">
-        </label>
-        <br>
-        <label for="price">
-            Стоимость товара
-            <input id="price" th:field="*{price}" required class="form-control">
-        </label>
-        <br>
-        <div th:each="option : ${category.getOptions()}">
-            <input type="hidden" name="optionIds" th:value="${option.id}">
-            <p th:text="${option.name}"></p>
-            <input name="valueNames" class="form-control">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <span class="fs-4">Spring Shop</span>
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/categories" class="nav-link">Все категории</a></li>
+            <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
+            <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
+            <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
+        </ul>
+    </header>
+
+    <div class="content">
+        <div class="alert alert-success">
+            Добро пожаловать, <span th:text="${user.name}"></span>!
         </div>
-        <button class="btn btn-primary" type="submit">Send</button>
-    </form>
+        <h1 th:text="${category.name}"></h1>
+        <form action="/products/create" method="post" th:object="${product}">
+            <input type="hidden" name="categoryId" th:value="${category.id}">
+            <label for="name">
+                Название товара
+                <input id="name" th:field="*{name}" required class="form-control">
+            </label>
+            <br>
+            <label for="price">
+                Стоимость товара
+                <input id="price" th:field="*{price}" required class="form-control">
+            </label>
+            <br>
+            <div th:each="option : ${category.getOptions()}">
+                <input type="hidden" name="optionIds" th:value="${option.id}">
+                <p th:text="${option.name}"></p>
+                <input name="valueNames" class="form-control">
+            </div>
+            <button class="btn btn-primary" type="submit">Send</button>
+        </form>
+    </div>
 </div>
+<footer class="footer">
+    <div class="container">
+        <span>Spring Shop &copy; 2024</span>
+    </div>
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
