--- a/src/main/resources/templates/product_single_page.html
+++ b/src/main/resources/templates/product_single_page.html
@@ -3,26 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Single Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin-top: 20px;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <span class="fs-4">Spring Shop</span>
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/categories" class="nav-link">Все категории</a></li>
+            <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
+            <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
+            <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
+        </ul>
+    </header>
 
-<div th:object="${product}">
-    <p>Название товара <b th:text="*{name}"></b></p>
-    <p>Стоимость товара <b th:text="*{price}"></b></p>
+    <div class="content">
+        <div class="alert alert-success">
+            Добро пожаловать, <span th:text="${user.name}"></span>!
+        </div>
+        <div th:object="${product}">
+            <p>Название товара <b th:text="*{name}"></b></p>
+            <p>Стоимость товара <b th:text="*{price}"></b></p>
+        </div>
+
+        <div>
+            <p th:each="entry : ${options}">
+                <span th:text="${entry.getKey().getName()}"></span>:
+                <span th:text="${entry.getValue().isPresent() ? entry.getValue().get().name : ''}"></span>
+            </p>
+        </div>
+        <div>
+            <form th:action="@{|/cart/${product.getId()}|}" method="post">
+                <button type="submit">Add to card</button>
+            </form>
+        </div>
+    </div>
 </div>
-
-<div>
-    <p th:each="entry : ${options}">
-        <span th:text="${entry.getKey().getName()}"></span>:
-        <span th:text="${entry.getValue().isPresent() ? entry.getValue().get().name : ''}"></span>
-    </p>
-</div>
-
-<div>
-    <form th:action="@{|/cart/${product.getId()}|}" method="post">
-        <button type="submit">Add to card</button>
-    </form>
-</div>
-
+<footer class="footer">
+    <div class="container">
+        <span>Spring Shop &copy; 2024</span>
+    </div>
+</footer>
 </body>
 </html>
