--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -24,6 +24,10 @@
         .content {
             min-height: 80vh;
         }
+
+        .table {
+            width: 70%;
+        }
     </style>
 </head>
 <body>
@@ -44,9 +48,24 @@
         <div class="alert alert-success">
             Добро пожаловать, <span th:text="${user.name}"></span>!
         </div>
-        <div th:each="item: ${cartItems}">
-            <p th:text="${item.product.name}"></p>
-            <p th:text="${item.quantity}"></p>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Наименование</th>
+                <th>Количество</th>
+                <th>Цена</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="item: ${cartItems}">
+                <td th:text="${item.product.name}"></td>
+                <td th:text="${item.quantity}"></td>
+                <td th:text="${item.product.price}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="d-flex justify-content-end">
+            <h4>Итоговая сумма: <span th:text="${total}"></span> KZT</h4>
         </div>
     </div>
 </div>
