--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -37,13 +37,14 @@
             <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
             <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
             <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
+            <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
         </ul>
     </header>
 
     <div class="content">
-        <div class="alert alert-success">
-            Добро пожаловать, <span th:text="${user.name}"></span>!
-        </div>
+<!--        <div class="alert alert-success">-->
+<!--            Добро пожаловать, <span th:text="${user.name}"></span>!-->
+<!--        </div>-->
 
         <h1>Все продукты</h1>
         <div>
