feat: add button 'Create order', page for address filling, list of all orders

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -72,6 +72,9 @@
         <div class="d-flex justify-content-end">
             <h4>Итоговая сумма: <span th:text="${total}"></span> KZT</h4>
         </div>
+        <div class="d-flex justify-content-end mt-3">
+            <a href="/orders" class="btn btn-primary">Оформить заказ</a>
+        </div>
     </div>
 </div>
 <footer class="footer">
