--- a/src/main/resources/templates/order_list.html
+++ b/src/main/resources/templates/order_list.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <span class="fs-4">Spring Shop</span>
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="/categories" class="nav-link">Все категории</a></li>
+            <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
+            <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
+            <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
+            <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
+        </ul>
+    </header>
     <h2 class="mt-3">Список заказов</h2>
     <table class="table table-striped mt-3">
         <thead>
