style: set HTML for login & user_register pages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,18 +38,16 @@
             <span class="fs-4">Spring Shop</span>
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/categories" class="nav-link">Все категории</a></li>
-            <li class="nav-item"><a href="/categories/create" class="nav-link">Создать категорию</a></li>
             <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
-            <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
-            <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Вход</a></li>
+            <li class="nav-item"><a href="/register" class="nav-link">Регистрация</a></li>
         </ul>
     </header>
 
     <div class="content">
-<!--        <div class="alert alert-success">-->
-<!--            Добро пожаловать, <span th:text="${user.name}"></span>!-->
-<!--        </div>-->
+        <!--        <div class="alert alert-success">-->
+        <!--            Добро пожаловать, <span th:text="${user.name}"></span>!-->
+        <!--        </div>-->
     </div>
 </div>
 
