refactor: show a text message if login/password are not correct

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,6 +74,9 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Войти</button>
                 </div>
+                <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                    Неправильный логин или пароль
+                </div>
             </form>
         </div>
     </div>
