refactor: redirect to login.html for unauthorized actions

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
                     <button type="submit" class="btn btn-primary btn-block">Войти</button>
                 </div>
                 <div th:if="${param.error}" class="alert alert-danger" role="alert">
-                    Неправильный логин или пароль
+                    Invalid username or password.
                 </div>
             </form>
         </div>
