style: update navigation bar

--- a/src/main/resources/templates/order_list.html
+++ b/src/main/resources/templates/order_list.html
@@ -18,6 +18,7 @@
             <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
             <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
             <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
+            <li class="nav-item"><a href="/orders/list" class="nav-link">Мои заказы</a></li>
         </ul>
     </header>
     <h2 class="mt-3">Список заказов</h2>
