--- a/src/main/resources/templates/product_create.html
+++ b/src/main/resources/templates/product_create.html
@@ -42,6 +42,7 @@
             <li class="nav-item"><a href="/products" class="nav-link">Все товары</a></li>
             <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
             <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
+            <li class="nav-item"><a href="/orders/list" class="nav-link">Мои заказы</a></li>
         </ul>
     </header>
 
