refactor: add delete button in cart.html

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -67,6 +67,9 @@
                     <a th:href="@{'/cart/' + ${item.id} + '/increase'}" class="btn btn-outline-secondary btn-sm">+</a>
                 </td>
                 <td th:text="${item.product.price}"></td>
+                <td>
+                    <a th:href="@{'/cart/' + ${item.id} + '/delete'}" class="btn btn-danger btn-sm">Удалить</a>
+                </td>
             </tr>
             </tbody>
         </table>
