--- a/src/main/resources/templates/order_success.html
+++ b/src/main/resources/templates/order_success.html
@@ -11,6 +11,8 @@
     <div class="alert alert-success mt-3" role="alert">
         <span th:text="${message}"></span>
     </div>
+    <br>
+    <a href="/orders/list" class="nav-link">Перейти в "Мои заказы"</a>
 </div>
 </body>
 </html>
