--- a/src/main/resources/templates/order_list.html
+++ b/src/main/resources/templates/order_list.html
@@ -19,6 +19,7 @@
             <li class="nav-item"><a href="/products/create" class="nav-link">Создать товар</a></li>
             <li class="nav-item"><a href="/cart" class="nav-link">Корзина</a></li>
             <li class="nav-item"><a href="/orders/list" class="nav-link">Мои заказы</a></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">Выйти</a></li>
         </ul>
     </header>
     <h2 class="mt-3">Список заказов</h2>
